tests/data/good/new_allowed.py
from __future__ import annotations

from tests.data.base_cfg import schema

cfg = schema.init_cfg()
cfg.NEW.one = "one"
